--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
             <a class="nav-link" href="linkedin.com/in/fatema-tuz-zohora-2b0831335">LinkedIn</a> or <a class="nav-link" href="ffatematuzzohora15@gmail.com">mail</a>
              
            
-
+<!-- new -->
 </body>
 </html>
